fix: update Google favicon URL and add header z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -302,6 +302,10 @@ body {
     padding-bottom: 50px;
     flex-direction: column;
 }
+header {
+    position: relative;
+    z-index: 10;
+}
 .welcome {
 
     font-size: 65px;
